# falcon.regex-dfa

./: CMakeDefinitions.txt  CMakeLists.txt  LICENSE
falcon/regex_dfa/: match.cpp  match.hpp  print_automaton.cpp  print_automaton.hpp  range_iterator.hpp  redfa.hpp  regex_consumer.hpp  reverse_transitions.cpp  reverse_transitions.hpp  scan.cpp  scan.hpp  scan3.cpp  scan_intervals.cpp  scan_intervals.hpp  trace.hpp
falcon/regex_dfa/scanner/: match.cpp  match.hpp  scanner.cpp  scanner.hpp  scanner_io.hpp
test/: test_match.cpp  test_scan.cpp  test_scan3.cpp
utils/: match.cpp  scan.cpp  scan2.cpp  scanner.cpp
